chore: final fixes
