# apps/credential-showcase-api-server/src/types/schema/index.ts
@@ -197,9 +197,9 @@ export type AriesProofRequest = typeof ariesProofRequests.$inferSelect
 export type NewAriesProofRequest = Omit<typeof ariesProofRequests.$inferInsert, 'stepAction'>
 
 export type Showcase = Omit<typeof showcases.$inferSelect, 'bannerImage'> & {
-  scenarios: (Scenario | string)[]
-  credentialDefinitions: (CredentialDefinition | string)[]
-  personas: (Persona | string)[]
+  scenarios: Scenario[]
+  credentialDefinitions: CredentialDefinition[]
+  personas: Persona[]
   bannerImage?: string | Asset | null
 }
 export type NewShowcase = Omit<typeof showcases.$inferInsert, 'slug'> & {
